@@ -1,3 +1,4 @@
+Add warnings about requesting a link local address.
 Always add a link-local route unless we're given a non-private
 address by the DHCP server.
 Reduce stack usage by using malloc more.
